syntax = "proto3";


package post;

option go_package = "/post";

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
}

message PostRequest {
    string id = 1;
}

message PostResponse {
    Post post = 1;
}


service PostService {
    rpc GetPostRpc(PostRequest) returns (PostResponse);
}




